--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -27,15 +27,15 @@
                 </div>
                 <t t-set="report_info"
                    class="col-6 text-right mb4">
-                    <h3 t-if="o.state != 'draft'">Sale Order</h3>
-                    <h3 t-if="o.state == 'draft'">Quotation</h3>
+                    <h3 t-if="o.state in ['sale','order_booked','pending_for_approval','cancel','done']">Sale Order</h3>
+                    <h3 t-if="o.state in ['draft','sent','quote_approval','quote_confirm']">Quotation</h3>
                     <h3 t-if="o.state == 'cancel'">Cancelled Sale Quotation/Order</h3>
                     <h4>
                         <strong>
                             <t t-esc="o.name"/>
                         </strong>
                     </h4>
-                    <t t-if="doc.state in ['draft']">
+                    <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">
                         <strong>Quotation Date:</strong>
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
@@ -44,7 +44,7 @@
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
                     </t>
-                    <t t-if="doc.state  in ['sale']">
+                    <t t-if="doc.state  in ['sale','pending_for_approval','cancel','done']">
                         <strong>Order Date:
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         </strong>
@@ -77,30 +77,30 @@
                 </t>
                 <t t-set="custom_information_block">
                     <div>
-                        <t t-if="doc.state in ['draft','sent']">
+                        <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">
                             <strong>Quotation:</strong>
                             <t t-esc="doc.name"/>
                             <br/>
                         </t>
-                        <t t-if="doc.state in ['draft','sent','confirm']">
+                        <t>
                             <strong>Need By Date:</strong>
                             <t t-esc="doc.commitment_date" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
 
-                        <t t-if="doc.state not in ['draft','sent']">
+                        <t t-if="doc.state in ['sale','order_booked','pending_for_approval','cancel','done']">
                             <strong>Sale Order:</strong>
                             <t t-esc="doc.name"/>
                             <br/>
                         </t>
-                        <t t-if="doc.state in ['draft']">
+                        <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">
                             <strong>Quotation Date:</strong>
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
-                        <t t-if="doc.state not in ['draft','sent']">
+                        <t t-if="doc.state in ['sale','order_booked','pending_for_approval','cancel','done']">
                             <strong>Order Date:</strong>
-                            <span t-esc="datetime.datetime.now()" t-options='{"widget": "date"}'>
+                            <span t-esc="o.date_order" t-options='{"widget": "date"}'>
                             </span>
                             <br/>
                         </t>
@@ -152,7 +152,7 @@
                    border: none;" name="th_priceunit" class="text-center">Price
                     </th>
                     <th name="th_taxes" t-if="line_taxes" class="text-center"
-                        style=" border-collapse: collapse;border: none;">
+                        style=" border-collapse: collapse;border: none; display:none !important;">
                         <span>Taxes</span>
                     </th>
                     <th style=" border-collapse: collapse;
@@ -234,13 +234,13 @@
                                t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </t>
                         <t t-else="">
-                            <span t-field="line.discount"
+                            <span t-field="line.discounted_price"
                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                         </t>
                     </span>
                 </td>
                 <td t-if="line_taxes" name="td_taxes" class="text-center" style="border-top: 1px solid black; border-left: none;
-                     border-right: none; border-bottom: 1px solid black;">
+                     border-right: none; border-bottom: 1px solid black;display:none !important;">
                     <span t-esc="', '.join(map(lambda x: (x.name), line.tax_id))"/>
                 </td>
                 <td style="border-top: 1px solid black; border-left: none;
@@ -330,12 +330,12 @@
                                 </t>
                             </td>
                         </tr>
-                        <tr>
+                        <tr style="background-color: #CC5500;">
                             <td style="padding-left:10px;color: black; height:1px ;" class="text-left">
                                 <strong class="border-black o_subtotal;text-right">Total</strong>
                             </td>
                             <td style=" height:1px; color: black;" class="text-right">
-                                <span t-field="doc.amount_total"/>
+                                <strong t-field="doc.amount_total"/>
                             </td>
                         </tr>
                     </table>
