[IMP] Improved Code of shipping report
(cherry picked from commit 28099adb0efc7f9dc74ed342decbde56e7077a42)

--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -39,7 +39,8 @@
                         <strong>Quotation Date:</strong>
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
-                    </t> <t t-if="doc.state in ['order_booked']">
+                    </t>
+                    <t t-if="doc.state in ['order_booked']">
                         <strong>Booked order date:</strong>
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
