--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -27,7 +27,7 @@
                 </div>
                 <t t-set="report_info"
                    class="col-6 text-right mb4">
-                    <h3 t-if="o.state in ['sale','order_booked','pending_for_approval','cancel','done']">Sale Order</h3>
+                    <h3 t-if="o.state in ['sale','order_booked','credit_review','pending_for_approval','cancel','done']">Sale Order</h3>
                     <h3 t-if="o.state in ['draft','sent','quote_approval','quote_confirm']">Quotation</h3>
                     <h3 t-if="o.state == 'cancel'">Cancelled Sale Quotation/Order</h3>
                     <h4>
@@ -45,7 +45,7 @@
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
                     </t>
-                    <t t-if="doc.state  in ['sale','pending_for_approval','cancel','done']">
+                    <t t-if="doc.state  in ['sale','pending_for_approval','credit_review','cancel','done']">
                         <strong>Order Date:
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         </strong>
@@ -89,7 +89,7 @@
                             <br/>
                         </t>
 
-                        <t t-if="doc.state in ['sale','order_booked','pending_for_approval','cancel','done']">
+                        <t t-if="doc.state in ['sale','order_booked','credit_review','pending_for_approval','cancel','done']">
                             <strong>Sale Order:</strong>
                             <t t-esc="doc.name"/>
                             <br/>
@@ -99,7 +99,7 @@
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
-                        <t t-if="doc.state in ['sale','order_booked','pending_for_approval','cancel','done']">
+                        <t t-if="doc.state in ['sale','order_booked','credit_review','pending_for_approval','cancel','done']">
                             <strong>Order Date:</strong>
                             <span t-esc="o.date_order" t-options='{"widget": "date"}'>
                             </span>
