[ADD] new Html field -big commerce description in BigCommerce Information tab

--- a/bigcommerce_odoo_integration/views/product_template.xml
+++ b/bigcommerce_odoo_integration/views/product_template.xml
@@ -20,7 +20,7 @@
             <field name="type">form</field>
             <field name="arch" type="xml">
                 <xpath expr="//sheet/notebook/page[last()]" position="after">
-                    <page string="BigCommerce Information">
+                    <page string="BigCommerce Information" name="bigcommerce_info">
                         <group>
                             <group>
                                 <field name="is_exported_to_bigcommerce" readonly="1"/>
