--- a/bista_bigcommerce_extend/views/product_template.xml
+++ b/bista_bigcommerce_extend/views/product_template.xml
@@ -54,5 +54,19 @@
             </field>
         </record>
 
+        <record id="add_bigcommerce_description_product_template_field" model="ir.ui.view">
+            <field name="name">product.template.fields</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <xpath expr="//page[@name='bigcommerce_info']/group[last()]" position="after">
+                    <group string="BigCommerce Product Description">
+                        <field name="bigcommerce_description" nolabel="1"/>
+                    </group>
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </odoo>
