--- a/bista_orders_report/views/sale_order_line_view.xml
+++ b/bista_orders_report/views/sale_order_line_view.xml
@@ -46,16 +46,16 @@
                     <field name="partner_country"/>                   
                     <field name="partner_state"/>                   
                     <field name="product_id" string="Product Name"/>    
-                    <field name="price_unit"/>
+                    <field name="discounted_price"/>
                     <field name="product_uom"/>
-                    <field name="product_onhand_qty" />           
+                    <field name="product_onhand_qty" />
                     <field name="product_uom_qty" string="Order Qty"/>           
                     <field name="qty_delivered" /> 
                     <field name="remaining_qty" string="Remaining Qty"/>
                     <field name="qty_shortclose" string="Short Close/ Refund Qty"/>    
-                    <field name="qty_invoiced"/>   
+                    <field name="qty_invoiced"/>
                     <field name="price_subtotal" string="Order Value"/>
-                    <field name="delivery_value"/>  
+                    <field name="delivery_value"/>
                     <field name="short_close_value" string="Short Close/ Refund Value"/> 
                     <field name="pending_value"/>
                     <field name="order_status" string="Order Status"/>
