--- a/sales_order_delivery_status/views/sales_order.xml
+++ b/sales_order_delivery_status/views/sales_order.xml
@@ -19,22 +19,7 @@
             <xpath expr="//field[@name='invoice_status']" position="after">
                 <field name="delivery_status" optional="show" widget="badge"
                     decoration-muted="delivery_status == 'nothing'"
-                    decoration-warning="delivery_status == 'to_deliver' or delivery_status == 'processing'"
-                    decoration-info="delivery_status == 'partial'"
-                    decoration-success="delivery_status == 'delivered'" />
-            </xpath>
-        </field>
-    </record>
-
-    <record id="sale_quotation_delivery_tree_view" model="ir.ui.view">
-        <field name="name">sale.quotation.tree.inherit</field>
-        <field name="model">sale.order</field>
-        <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding" />
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='state']" position="after">
-                <field name="delivery_status" optional="show" widget="badge"
-                    decoration-muted="delivery_status == 'nothing'"
-                    decoration-warning="delivery_status == 'to_deliver' or delivery_status == 'processing'"
+                    decoration-warning="delivery_status in ['to_deliver', 'processing']"
                     decoration-info="delivery_status == 'partial'"
                     decoration-success="delivery_status == 'delivered'" />
             </xpath>
