--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -20,6 +20,9 @@
                 <field name="discounted_price" optional="show" />
                 <field name="saving_amount" optional="show" readonly="1" />
             </xpath>
+            <xpath expr="//field[@name='order_line']/tree/field[@name='discount']" position="attributes">
+                <attribute name="readonly">1</attribute>
+            </xpath>
             <field name="tax_totals_json" position="after">
                 <field style="font-size: 1.3em; font-weight: bold;" name="saving_amount" readonly="1" />
             </field>
