[IMP] Improved Code

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -88,7 +88,7 @@
                         <group name="order_details">
                             <field name='refer_by_company'/>
                             <field name='refer_by_person'/>
-<!--                            <field name='order_processing_time'/>-->
+                            <!--                            <field name='order_processing_time'/>-->
                         </group>
                         <group class="o_row">
                             <group>
@@ -205,6 +205,16 @@
                         <field name="report_notes"/>
                     </group>
                 </page>
+            </xpath>
+        </field>
+    </record>
+    <record id="bista_sale_sale_quotation_delivery_tree_view" model="ir.ui.view">
+        <field name="name">bista.sale.sale.quotation.tree.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='state']" position="before">
+                <field name="order_processing_time" optional="hide"/>
             </xpath>
         </field>
     </record>
