--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -218,4 +218,14 @@
             </xpath>
         </field>
     </record>
+    <record id="view_order_tree_inherit_add_tags" model="ir.ui.view">
+        <field name="name">Sale order Tree</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_tree" />
+        <field name="arch" type="xml">
+            <field name="invoice_status" position="after">
+                <field name="tag_ids" widget="many2many_tags"/>
+            </field>
+        </field>
+    </record>
 </odoo>
